--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        
+    <header class="header">
+        <div class="header-container">
+            <div class="header-container-logo">
+                <img src="assets/selfcare-logo.png" alt="logo">
+            </div>
+            <div class="header-container-menu">
+                    <img src="assets/search.png" alt="search">
+                    <img src="assets/user.png" alt="user">
+                    <img src="assets/market.png" alt="market">
+            </div>
+        </div>
     </header>
 </body>
 </html>
