feat: banner and description

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Selfcare</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="header-container">
@@ -14,11 +16,25 @@
                 <img src="assets/selfcare-logo.png" alt="logo">
             </div>
             <div class="header-container-menu">
-                    <img src="assets/search.png" alt="search">
-                    <img src="assets/user.png" alt="user">
-                    <img src="assets/market.png" alt="market">
+                <img src="assets/search.png" alt="search">
+                <img src="assets/user.png" alt="user">
+                <img src="assets/market.png" alt="market">
             </div>
         </div>
     </header>
+    <main class="content">
+        <div class="content-banner">
+            <!-- <img class="banner-image" src="assets/banner.png" alt=""> -->
+        </div>
+        <div class="content-main">
+            <div class="content-main-descripition-container">
+                <div class="content-main-descripition">
+                    <p>PROMOÇÃO</p>
+                    <p>9 produtos</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
