feat: alterações no css e no menu de itens

--- a/index.html
+++ b/index.html
@@ -33,6 +33,71 @@
                     <p>9 produtos</p>
                 </div>
             </div>
+            <div class="content-main-container-products">
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img src="assets/products/image 1.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p>50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img src="assets/products/image 2.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p>50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img src="assets/products/image 3.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p>50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img src="assets/products/image 3.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p>50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </main>
 </body>
