feat: produtos e começo do footer

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <div class="content-main-container-products">
                 <div class="content-main-products">
                     <div class="content-main-products-item">
-                        <img src="assets/products/image 1.png" alt="">
+                        <img class="product-image" src="assets/products/image 1.png" alt="">
                     </div>
                     <div class="content-main-products-description">
                         <div class="product-name">
-                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                            <p>Lorem ipsum dolor sit</p>
                         </div>
                         <div class="product-price">
                             <p>R$
-                            <p>50,00</p>
+                            <p class="product-prince-number">50,00</p>
                             </p>
                         </div>
                     </div>
@@ -52,45 +52,120 @@
 
                 <div class="content-main-products">
                     <div class="content-main-products-item">
-                        <img src="assets/products/image 2.png" alt="">
+                        <img class="product-image" src="assets/products/image 2.png" alt="">
                     </div>
                     <div class="content-main-products-description">
                         <div class="product-name">
-                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                            <p>Lorem ipsum dolor sit</p>
                         </div>
                         <div class="product-price">
-                            <p>R$
-                            <p>50,00</p>
+                            <p>R$ 
+                            <p class="product-prince-number"> 50,00</p>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="content-main-products">
                     <div class="content-main-products-item">
-                        <img src="assets/products/image 3.png" alt="">
+                        <img class="product-image" src="assets/products/image 3.png" alt="">
                     </div>
                     <div class="content-main-products-description">
                         <div class="product-name">
-                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                            <p>Lorem ipsum dolor sit</p>
                         </div>
                         <div class="product-price">
                             <p>R$
-                            <p>50,00</p>
+                            <p class="product-prince-number">50,00</p>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="content-main-products">
                     <div class="content-main-products-item">
-                        <img src="assets/products/image 3.png" alt="">
+                        <img class="product-image" src="assets/products/image 4.png" alt="">
                     </div>
                     <div class="content-main-products-description">
                         <div class="product-name">
-                            <p>Lorem ipsum dolor sit amet consectetuer</p>
+                            <p>Lorem ipsum dolor sit</p>
                         </div>
                         <div class="product-price">
                             <p>R$
-                            <p>50,00</p>
+                            <p class="product-prince-number">50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img class="product-image" src="assets/products/image 5.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p class="product-prince-number">50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img class="product-image" src="assets/products/image 6.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p class="product-prince-number">50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img class="product-image" src="assets/products/image 7.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p class="product-prince-number">50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img class="product-image" src="assets/products/image 8.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p class="product-prince-number">50,00</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-main-products">
+                    <div class="content-main-products-item">
+                        <img class="product-image" src="assets/products/image 9.png" alt="">
+                    </div>
+                    <div class="content-main-products-description">
+                        <div class="product-name">
+                            <p>Lorem ipsum dolor sit</p>
+                        </div>
+                        <div class="product-price">
+                            <p>R$
+                            <p class="product-prince-number">50,00</p>
                             </p>
                         </div>
                     </div>
@@ -100,6 +175,9 @@
 
         </div>
     </main>
+    <footer class="footer-container">
+
+    </footer>
 </body>
 
 </html>
