--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <p>Lorem ipsum dolor sit</p>
                         </div>
                         <div class="product-price">
-                            <p>R$ 
+                            <p>R$
                             <p class="product-prince-number"> 50,00</p>
                             </p>
                         </div>
@@ -176,7 +176,34 @@
         </div>
     </main>
     <footer class="footer-container">
-
+        <div class="footer-top">
+            <div class="footer-top-right">
+                <a href="">Contato</a>
+                <a href="">Termo de Serviço</a>
+                <a href="">Política de privacidade</a>
+                <a href="">Cancelamento, troca e reembolso</a>
+            </div>
+            <div class="footer-top-left">
+                <p>Newsletter</p>
+                <div class="footer-top-left-input">
+                    <input class="input" type="email" placeholder="Digite seu melhor e-mail!">
+                    <button>Inscrever</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom-container">
+            <div class="footer-bottom">
+                <div class="footer-bottom-left">
+                    <a href="instagram"><img class="footer-image-top"  src="assets/instagram.png" alt=""></a>
+                    <a href="facebook"><img class="footer-image-top"  src="assets/facebook.png" alt=""></a>
+                </div>
+                <div class="footer-bottom-right">
+                    <a href="mastercard"><img class="footer-image"  src="assets/mastercard.png" alt=""></a>
+                    <a href="paypal"><img class="footer-image-paypal"  src="assets/paypal.png" alt=""></a>
+                    <a href="visa"><img class="footer-image"  src="assets/visa.png" alt=""></a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
